[tool.poetry]
name = "Bezyl-Discord-Bot-Production-Release"
version = "0.0.1"
description = "Bezyl is a multi-purpose generalised Discord Bot that is based off of previous bots made by CaptainVietnam6, this time with more capabilities and a new, enhanced, and rebuilt code structure."
authors = ["Kiet Pham <kiet.riley2005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
"discord.py" = "^1.7.2"
Flask = "^1.1.2"
youtube_dl = "^2021.4.26"
PyNaCl = "^1.4.0"
PyDictionary = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
